AWS/projects/Project-001-Roman-Numerals-Converter/cfn-tamplate.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  The Roman Numerals Converter Application aims to convert the given number to the Roman numerals. The application is to be coded in Python and deployed as a web application with Flask on AWS Elastic Compute Cloud (EC2) Instance using AWS Cloudformation and CLI Services.

Resources:
  NuraySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Flask Web Server and SSH port to secure reach to my EC2.
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  NurayServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0b5eea76982371e91
      KeyName: nuray-key
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref NuraySecurityGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: !Base64 |
        #! /bin/bash
        yum update -y
        yum install python3 -y
        pip3 install flask
        yum install git -y
        cd /home/ec2-user
        wget -P templates https://raw.githubusercontent.com/Nuraybzdmr/Roman-numbers/main/templates/index.html
        wget -P templates https://raw.githubusercontent.com/Nuraybzdmr/Roman-numbers/main/templates/result.html
        wget https://raw.githubusercontent.com/Nuraybzdmr/Roman-numbers/main/app.py
        python3 app.py

Outputs:
  WebsiteURL:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt NurayServerHost.PublicDnsName
    Description: Roman Numerals Converter Application URL
